--- a/ColorGame.html
+++ b/ColorGame.html
@@ -31,7 +31,10 @@
             <div></div>
         </section>
     </main>
-    <footer></footer>
+    <footer class="container-fluid">
+        <h4>Made by Tamtox</h4>
+        <a href="https://github.com/Tamtox" target="_blank" id="github-link"><i class="fab fa-github"></i></i></a>
+    </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
